RESOLVED FIXED143405
REGRESSION (r182215): Feedly crashes when closing article
https://bugs.webkit.org/show_bug.cgi?id=143405
Summary REGRESSION (r182215): Feedly crashes when closing article
Simon Fraser (smfr)
Reported 2015-04-04 13:55:17 PDT
REGRESSION (r182215): Feedly crashes when closing article
Attachments
Patch (16.98 KB, patch)
2015-04-04 14:01 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2015-04-04 14:01:49 PDT
Simon Fraser (smfr)
Comment 2 2015-04-04 14:03:01 PDT
Tim Horton
Comment 3 2015-04-04 14:27:35 PDT
Comment on attachment 250138 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=250138&action=review > Source/WebCore/page/scrolling/mac/ScrollingCoordinatorMac.mm:118 > + willCommitTree(); This isn't a "will", it's a "may", no? > LayoutTests/platform/mac-wk2/tiled-drawing/scrolling/non-fast-region/compute-region-inside-delete-renderer-crash.html:19 > + setTimeout( function() { Weird space before the f
Simon Fraser (smfr)
Comment 4 2015-04-04 15:41:03 PDT
Joseph Pecoraro
Comment 5 2015-04-05 12:40:00 PDT
*** Bug 143401 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.